v10/docs/ModelsKeyfactorAPISecret.md
# ModelsKeyfactorAPISecret

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**SecretValue** | Pointer to **string** |  | [optional] 
**Parameters** | Pointer to **map[string]string** |  | [optional] 
**Provider** | Pointer to **int64** |  | [optional] 

## Methods

### NewModelsKeyfactorAPISecret

`func NewModelsKeyfactorAPISecret() *ModelsKeyfactorAPISecret`

NewModelsKeyfactorAPISecret instantiates a new ModelsKeyfactorAPISecret object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsKeyfactorAPISecretWithDefaults

`func NewModelsKeyfactorAPISecretWithDefaults() *ModelsKeyfactorAPISecret`

NewModelsKeyfactorAPISecretWithDefaults instantiates a new ModelsKeyfactorAPISecret object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetSecretValue

`func (o *ModelsKeyfactorAPISecret) GetSecretValue() string`

GetSecretValue returns the SecretValue field if non-nil, zero value otherwise.

### GetSecretValueOk

`func (o *ModelsKeyfactorAPISecret) GetSecretValueOk() (*string, bool)`

GetSecretValueOk returns a tuple with the SecretValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSecretValue

`func (o *ModelsKeyfactorAPISecret) SetSecretValue(v string)`

SetSecretValue sets SecretValue field to given value.

### HasSecretValue

`func (o *ModelsKeyfactorAPISecret) HasSecretValue() bool`

HasSecretValue returns a boolean if a field has been set.

### GetParameters

`func (o *ModelsKeyfactorAPISecret) GetParameters() map[string]string`

GetParameters returns the Parameters field if non-nil, zero value otherwise.

### GetParametersOk

`func (o *ModelsKeyfactorAPISecret) GetParametersOk() (*map[string]string, bool)`

GetParametersOk returns a tuple with the Parameters field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetParameters

`func (o *ModelsKeyfactorAPISecret) SetParameters(v map[string]string)`

SetParameters sets Parameters field to given value.

### HasParameters

`func (o *ModelsKeyfactorAPISecret) HasParameters() bool`

HasParameters returns a boolean if a field has been set.

### GetProvider

`func (o *ModelsKeyfactorAPISecret) GetProvider() int64`

GetProvider returns the Provider field if non-nil, zero value otherwise.

### GetProviderOk

`func (o *ModelsKeyfactorAPISecret) GetProviderOk() (*int64, bool)`

GetProviderOk returns a tuple with the Provider field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetProvider

`func (o *ModelsKeyfactorAPISecret) SetProvider(v int64)`

SetProvider sets Provider field to given value.

### HasProvider

`func (o *ModelsKeyfactorAPISecret) HasProvider() bool`

HasProvider returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


