v11/docs/ModelsKeyfactorAPISecret.md
# ModelsKeyfactorAPISecret

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**SecretValue** | Pointer to **NullableString** |  | [optional] 
**Parameters** | Pointer to **map[string]string** |  | [optional] 
**Provider** | Pointer to **NullableInt32** |  | [optional] 
**HasValue** | Pointer to **bool** |  | [optional] [readonly] 

## Methods

### NewModelsKeyfactorAPISecret

`func NewModelsKeyfactorAPISecret() *ModelsKeyfactorAPISecret`

NewModelsKeyfactorAPISecret instantiates a new ModelsKeyfactorAPISecret object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsKeyfactorAPISecretWithDefaults

`func NewModelsKeyfactorAPISecretWithDefaults() *ModelsKeyfactorAPISecret`

NewModelsKeyfactorAPISecretWithDefaults instantiates a new ModelsKeyfactorAPISecret object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetSecretValue

`func (o *ModelsKeyfactorAPISecret) GetSecretValue() string`

GetSecretValue returns the SecretValue field if non-nil, zero value otherwise.

### GetSecretValueOk

`func (o *ModelsKeyfactorAPISecret) GetSecretValueOk() (*string, bool)`

GetSecretValueOk returns a tuple with the SecretValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSecretValue

`func (o *ModelsKeyfactorAPISecret) SetSecretValue(v string)`

SetSecretValue sets SecretValue field to given value.

### HasSecretValue

`func (o *ModelsKeyfactorAPISecret) HasSecretValue() bool`

HasSecretValue returns a boolean if a field has been set.

### SetSecretValueNil

`func (o *ModelsKeyfactorAPISecret) SetSecretValueNil(b bool)`

 SetSecretValueNil sets the value for SecretValue to be an explicit nil

### UnsetSecretValue
`func (o *ModelsKeyfactorAPISecret) UnsetSecretValue()`

UnsetSecretValue ensures that no value is present for SecretValue, not even an explicit nil
### GetParameters

`func (o *ModelsKeyfactorAPISecret) GetParameters() map[string]string`

GetParameters returns the Parameters field if non-nil, zero value otherwise.

### GetParametersOk

`func (o *ModelsKeyfactorAPISecret) GetParametersOk() (*map[string]string, bool)`

GetParametersOk returns a tuple with the Parameters field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetParameters

`func (o *ModelsKeyfactorAPISecret) SetParameters(v map[string]string)`

SetParameters sets Parameters field to given value.

### HasParameters

`func (o *ModelsKeyfactorAPISecret) HasParameters() bool`

HasParameters returns a boolean if a field has been set.

### SetParametersNil

`func (o *ModelsKeyfactorAPISecret) SetParametersNil(b bool)`

 SetParametersNil sets the value for Parameters to be an explicit nil

### UnsetParameters
`func (o *ModelsKeyfactorAPISecret) UnsetParameters()`

UnsetParameters ensures that no value is present for Parameters, not even an explicit nil
### GetProvider

`func (o *ModelsKeyfactorAPISecret) GetProvider() int32`

GetProvider returns the Provider field if non-nil, zero value otherwise.

### GetProviderOk

`func (o *ModelsKeyfactorAPISecret) GetProviderOk() (*int32, bool)`

GetProviderOk returns a tuple with the Provider field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetProvider

`func (o *ModelsKeyfactorAPISecret) SetProvider(v int32)`

SetProvider sets Provider field to given value.

### HasProvider

`func (o *ModelsKeyfactorAPISecret) HasProvider() bool`

HasProvider returns a boolean if a field has been set.

### SetProviderNil

`func (o *ModelsKeyfactorAPISecret) SetProviderNil(b bool)`

 SetProviderNil sets the value for Provider to be an explicit nil

### UnsetProvider
`func (o *ModelsKeyfactorAPISecret) UnsetProvider()`

UnsetProvider ensures that no value is present for Provider, not even an explicit nil
### GetHasValue

`func (o *ModelsKeyfactorAPISecret) GetHasValue() bool`

GetHasValue returns the HasValue field if non-nil, zero value otherwise.

### GetHasValueOk

`func (o *ModelsKeyfactorAPISecret) GetHasValueOk() (*bool, bool)`

GetHasValueOk returns a tuple with the HasValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetHasValue

`func (o *ModelsKeyfactorAPISecret) SetHasValue(v bool)`

SetHasValue sets HasValue field to given value.

### HasHasValue

`func (o *ModelsKeyfactorAPISecret) HasHasValue() bool`

HasHasValue returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


